Agregados endpoints a documentacion swagger
